fix(menu): added z-index at menu component

--- a/src/components/Menu/Menu.module.scss
+++ b/src/components/Menu/Menu.module.scss
@@ -9,6 +9,7 @@
     flex-direction: column;
     padding: 2rem;
     transition: .3s ease;
+    z-index: 9999;
     button {
         background: none;
         outline: none;
